--- a/templates/base.html
+++ b/templates/base.html
@@ -17,5 +17,12 @@
   <div class="max-w-4xl mx-auto p-6">
     {% block content %}{% endblock %}
   </div>
+  
+  <footer class="text-sm text-center text-gray-500 mt-12">
+  <a href="/impressum" class="hover:underline">Impressum</a> |
+  <a href="/datenschutz" class="hover:underline">Datenschutz</a> |
+  <a href="/nutzung" class="hover:underline">Nutzungshinweis</a>
+</footer>
+
 </body>
 </html>
