--- a/templates/formular.html
+++ b/templates/formular.html
@@ -27,3 +27,8 @@
     <!-- Datei-Upload -->
     <div>
       <label for="datei" class="block text-sm font
+
+        </form>
+</section>
+
+{% endblock %}
