--- a/templates/base.html
+++ b/templates/base.html
@@ -36,5 +36,12 @@
     <a href="/nutzung" class="hover:underline">Nutzungshinweis</a>
   </footer>
 
+  <footer>
+  <div style="text-align: center; padding: 2rem;">
+    <img src="{{ url_for('static', filename='doneo_siegel.png') }}" alt="Doneo Siegel" style="height: 100px; opacity: 0.6;">
+    <p style="font-size: 0.8rem; color: #777;">Verifiziert durch das Doneo Echo Vault Original-Siegel</p>
+  </div>
+</footer>
+
 </body>
 </html>
