--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,11 @@
   </style>
 </head>
 <body class="bg-blue-50 text-gray-900 min-h-screen flex flex-col">
+  
+  <header style="text-align: center; padding-top: 1rem;">
+  <img src="{{ url_for('static', filename='doneo_logo.png') }}" alt="Doneo Echo Vault" style="height: 60px;">
+</header>
+
 
   <!-- Header Navigation -->
   <header class="bg-white shadow-sm py-4 mb-6">
