--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
 
   <footer>
   <div style="text-align: center; padding: 2rem;">
-    <img src="{{ url_for('static', filename='doneo_siegel_transparent.png') }}" alt="Doneo Siegel" style="height: 100px; opacity: 0.6;">
+   <img src="{{ url_for('static', filename='doneo_siegel_transparent.png') }}" alt="Siegel" style="height: 100px; opacity: 0.6;">
     <p style="font-size: 0.8rem; color: #777;">Verifiziert durch das Doneo Echo Vault Original-Siegel</p>
   </div>
 </footer>
