--- a/templates/base.html
+++ b/templates/base.html
@@ -125,7 +125,9 @@
   </nav>
 </header>
 
-{% block content %}{% endblock %}
+<main>
+  {% block content %}{% endblock %}
+</main>
 
 <footer>
   <p>&copy; 2025 Doneo Echo Vault – Alle Rechte vorbehalten | <a href="/datenschutz">Datenschutz</a> | <a href="/impressum">Impressum</a></p>
